# AdvCppCourse

./: .gitignore  C.cpp  C.h  CMakeLists.txt  D.h  SafeStack.h  Str.h  TestedClass.cpp  TestedClass.h  ThreadGuard.h  ThreadVector.h  XX.h  main.cpp
Tests/: CustomExceptions.cpp  Person.h  StandardExceptions.cpp  tests.cpp
Tests/codility/: Lesson1BinaryGap.cpp
Tests/concurrent/: BasicFutureLesson24.cpp  BasicMutex.cpp  BasicThread.cpp  ConcurrentAccumulate.cpp  ConditionVariables.cpp  DeadlockAvoidance.cpp  SafeStackTests.cpp  ThreadGuartTests.cpp  ThreadQueue.cpp
Tests/exceptions/: BasicExceptions.cpp  CatchingSubclassExceptions.cpp
Tests/fileio/: BinaryFiles.cpp  ParsingTextFile.cpp  ReadingTextFile.cpp  WritingTextFile.cpp
Tests/functional/: BindPlay.cpp  FuncPointerPlay.cpp  FunctorsPlay.cpp  LambdaPlay.cpp  StdFunctionPlay.cpp
Tests/myplay/: ArrayPlay.cpp  PrefixPostfixIncrement.cpp  RefPlay.cpp
Tests/newfeatures/: Casting.cpp  ConstructorsAndMemoryLecture.cpp  InitializationPlay.cpp  LValueReferences.cpp  MoveConstructorTestsWithCustomStrClass.cpp  MoveSemanticsStudy.cpp  ObjectInitDefaultAndDelete.cpp  RValueReferences.cpp  SharedPointers.cpp  Typing.cpp  UniquePointers.cpp  ezLooping.cpp  perfectForwarding.cpp  reinterpretCasts.cpp
Tests/overload/: ComplexNum.cpp  ComplexNum.h  ComplexNumTests.cpp  PointerWrapper.cpp
Tests/stlbasics/: Deques.cpp  Lists.cpp  MapWithCustomClassAsKey.cpp  MapWithCustomClassAsValue.cpp  Maps.cpp  Multimaps.cpp  Sets.cpp  SortingVectors.cpp  StackAndQueue.cpp  StlComplexDataTypes.cpp  TwoDimensionalVectors.cpp  Vectors.cpp  (+1 more)
(+2 files in other folders)
